# zyan-hook-engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
cmake/: zyrex-config.cmake.in
doc/: Barrier.md
examples/: Barrier.c  InlineHook.c
include/Zyrex/: Barrier.h  Config.h  Defines.h  InlineHook.h  Status.h  Trampoline.h  Transaction.h  Utils.h  Zyrex.h
include/Zyrex/Internal/: InlineHook.h  Relocation.h  Trampoline.h  Utils.h
include/zycore/: Defines.h
include/zyrex/: Zyrex.h
resources/: VersionInfo.rc
src/: Barrier.c  InlineHook.c  Relocation.c  Trampoline.c  Trampoline.cpp  Transaction.c  Utils.c  VersionInfo.rc  Zyrex.c
